<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
SPDX-FileCopyrightText: 2025, FANUC America Corporation
SPDX-FileCopyrightText: 2025, FANUC CORPORATION
SPDX-License-Identifier: Apache-2.0
-->
<package format="3">
  <name>fanuc_forward_command</name>
  <version>1.1.1</version>
  <description>FANUC robot forward command controller configuration and sine wave generator</description>
  <maintainer email="fanuc-ros-maintainer@fanuc.co.jp">FANUC CORPORATION</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>forward_command_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>fanuc_hardware_interface</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
