<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
  <!--
  SPDX-FileCopyrightText: 2025, FANUC America Corporation
  SPDX-FileCopyrightText: 2025, FANUC CORPORATION
  SPDX-License-Identifier: Apache-2.0
  -->
<package format="3">
  <name>fanuc_hardware_interface</name>
  <version>1.1.1</version>
  <description>
    ROS 2 control streaming driver for FANUC robots.
  </description>
  <license>Apache-2.0</license>
  <maintainer email="fanuc-ros-maintainer@fanuc.co.jp">FANUC CORPORATION</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fanuc_libs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
