<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
SPDX-FileCopyrightText: 2025, FANUC America Corporation
SPDX-FileCopyrightText: 2025, FANUC CORPORATION
SPDX-License-Identifier: Apache-2.0
-->
<package format="3">
  <name>fanuc_msgs</name>
  <version>1.1.1</version>
  <description>Messages for interacting with FANUC Robots.</description>
  <maintainer email="fanuc-ros-maintainer@fanuc.co.jp">FANUC CORPORATION</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
